# triton

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FetchContent.cmake  GetImGui.cmake  LICENSE.txt  README.md  Triton.sln  Triton.sln.DotSettings  comp.spv  design.md  frag.spv  imgui.ini  newlines.ps1  project.json  renderdoc.cap  some_file.json  todo.md  triton.code-workspace  vcpkg.json  vert.spv
apps/assettool/: CMakeLists.txt
apps/assettool/src/: main.cxx
apps/cauldron/: CMakeLists.txt
apps/cauldron/src/: Application.cxx  Application.hpp  ApplicationController.cxx  ApplicationController.hpp  ImGuiAdapter.cxx  ImGuiAdapter.hpp  PrefKeys.hpp  Preferences.cxx  Preferences.hpp  Properties.hpp  TaskQueue.hpp  config.h  main.cxx
apps/editor/: CMakeLists.txt
apps/editor/src/: Application.cxx  Application.hpp  IconData.hpp  ImGuiSink.hpp  KeyMap.hpp  Properties.hpp  main.cxx
apps/testarea/: CMakeLists.txt
apps/testarea/src/: Application.cxx  Application.hpp  Data.hpp  DefaultWindow.cxx  DefaultWindow.hpp  QueueStateBuffer.cxx  QueueStateBuffer.hpp  View.hpp  factorial.hpp  main.cxx
apps/testarea/test/: CMakeLists.txt  TestFactorial.cxx  TestFactorial2.cxx
driver/: CMakeLists.txt  Readme.md  config.h  config.h.in  main.cxx  notes.txt
driver/game/: Component.hpp  FirstLayer.cxx  FirstLayer.hpp  GameObject.cxx  GameObject.hpp  Layer.hpp  LayerStack.cxx  LayerStack.hpp  MeshComponent.hpp  Scene.hpp  SceneGame.cxx  SceneGame.hpp  SceneManager.cxx  SceneManager.hpp
editor/: Application.cxx  Application.hpp  CMakeLists.txt  config.h  main.cxx
editor/data/: example-project.json  schema.json
editor/data/projects/: example-project.json  output.json
editor/src/: Application.cxx  Application.hpp  EntityEditor.hpp  ImFileBrowser.hpp  ImGuiStyle.hpp  ProjectFile.cxx  ProjectFile.hpp  Properties.hpp  config.h  main.cxx
editor/src/ui/: Manager.cxx  Manager.hpp
fbxtool/: CMakeLists.txt
fbxtool/src/: OzzMesh.cxx  main.cxx  ufbx.c
game/: CMakeLists.txt
game/include/: Game.hpp
game/include/ecs/: Transform.hpp
game/src/: Game.cxx  Paths.hpp
game/src/actions/: ActionSystem.cxx  ActionSystem.hpp
game/src/components/: Camera.hpp  Renderable.hpp  Script.hpp
game/src/systems/: CameraController.hpp  CameraSystem.cxx  InputSystem.hpp  RenderSystem.cxx  RenderSystem.hpp  ScriptingSystem.cxx  ScriptingSystem.hpp  TransformSystem.cxx  TransformSystem.hpp
input/: CMakeLists.txt
input/include/: Action.hpp  ActionManager.hpp  Bimap.hpp  GlfwKeyMap.hpp  InputMapper.hpp  KeyState.hpp
input/src/: ActionManager.cxx  GlfwKeyMap.cxx
libs/asset-forge/: CMakeLists.txt  Readme.md
libs/asset-forge/src/: ModelConverter.cxx
libs/asset-forge/test/: CMakeLists.txt
libs/asset-lib/: CMakeLists.txt
libs/asset-lib/include/: Converter.hpp  GlmCereal.hpp  GltfConverter.hpp  GltfHelpers.hpp  GltfImporter.hpp  Model.hpp  ModelData.hpp  Thing.hpp  scratch.txt  scratch2.txt
libs/asset-lib/src/: Converter.cxx  GltfConverter.cxx  GltfImporter.cxx  ModelConverter.cxx  Thing.cxx
libs/asset-lib/test/: CMakeLists.txt  MockTinyGltf.hpp  TestGltfConverter.cxx  TestGltfHelpers.cxx  ToString.hpp
libs/base-kit/: CMakeLists.txt
libs/base-kit/include/: Color.hpp  di.hpp
libs/base-kit/src/: Logger2.cxx  Preferences.cxx
libs/framework/: CMakeLists.txt
libs/framework/src/: ActionSystem.cxx  ActionSystem.hpp  DefaultAssetService.cxx  DefaultAssetService.hpp  DefaultEventBus.hpp  EditorStateBuffer.cxx  EventQueue.hpp  EventQueue2.hpp  FixedGameLoop.cxx  FixedGameLoop.hpp  FrameworkContextImpl.cxx  FrameworkContextImpl.hpp  FrameworkFactory.cxx  GeometryGenerator.cxx  GuiCallbackRegistrar.cxx  HorribleStateBuffer.cxx  QueueStateBuffer.cxx  QueueStateBuffer.hpp  QuitFlag.hpp  RenderProxyRingBuffer.hpp  RingBuffer.cxx  RingBuffer.hpp  TaskQueue.hpp  ThreadedGameLoop.cxx  ThreadedGameLoop.hpp  UIStateBuffer.cxx
libs/framework/test/: CMakeLists.txt  (+5 more)
libs/game-world/: CMakeLists.txt
libs/glfw-vulkan/: CMakeLists.txt
libs/graphics-vk/: CMakeLists.txt  design.md
libs/shared/: CMakeLists.txt
libs/shared-api/: CMakeLists.txt
libs/triton/: CMakeLists.txt
libs/triton-di/: CMakeLists.txt
libs/util-lib/: CMakeLists.txt
libs/utils-lib/: CMakeLists.txt
libs/voxel-terrain/: CMakeLists.txt
src/: Application.cxx  Application.hpp  CMakeLists.txt  main.cxx  pch.hpp
src/actions/: ActionSet.cxx  ActionSet.hpp  ActionSystem.cxx  ActionSystem.hpp  ActionType.hpp  KeyMap.cxx  Mouse.hpp  Sources.hpp
src/core/: Timer.hpp
src/game/: Actions.hpp  Application.cxx  Application.hpp  Game.cxx  Game.hpp
src/graphics/: FrameData.cxx  FrameData.hpp  GraphicsDevice.cxx  GraphicsDevice.hpp  Handles.hpp  ImmediateContext.cxx  ObjectData.hpp  RenderObject.hpp  Renderer.cxx  Renderer.hpp  Vertex.cxx  Vertex.hpp  vma_raii.cxx
src/util/: Paths.hpp  Timer.hpp
testarea/: CMakeLists.txt  FooScript.cxx  FooScript.hpp  ScriptFactory.cxx  ScriptFactory.hpp  fooscript.lua  main.cxx
testarea/src/: main.cxx
triton/: CMakeLists.txt
triton-next/: CMakeLists.txt  config.h  main.cxx  pch.hpp
triton-next/core/: Logger.hpp  Paths.hpp  Timer.hpp
triton-next/game/: Application.cxx  Application.hpp  Game.hpp
triton-next/graphics/: FrameData.hpp  GraphicsDevice.cxx  GraphicsDevice.hpp  Handles.hpp  ImmediateContext.cxx  ObjectData.hpp  RenderObject.hpp  Renderer.cxx  Renderer.hpp
triton/include/: ActionManager.hpp  ActionManagerProxy.hpp  ActionSet.hpp  ActionType.hpp  Application.hpp  ApplicationContext.hpp  ApplicationEvent.h  Context.hpp  DefaultActionManager.hpp  DefaultActionSet.hpp  Delegates.hpp  Events.hpp  Game.hpp  GameContainer.hpp  IGame.hpp  KeyEvent.h  Keys.hpp  Log.hpp  Logger.hpp  RenderObject.hpp  Renderer.hpp  ResourceFactory.hpp  ResourceManager.hpp  TransferData.hpp
triton/src/: Application.cxx  Application.hpp  ApplicationContext.cxx  Context.cxx  DefaultResourceFactory.cxx  DefaultResourceFactory.hpp  GameContainer.cxx  Renderer.cxx  Renderer.hpp  ResourceFactory.hpp
ufbx/: CMakeLists.txt
ufbx/include/: ufbx.h
(+1902 files in other folders)
